--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
+# Build files
+/build
+/dist
+
+# IDE files
+.vscode/
+.idea/
